--- a/Part_3/Part_1/Part_1.csproj
+++ b/Part_3/Part_1/Part_1.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangedUnit.cs" />
     <Compile Include="Unit.cs" />
+    <Compile Include="WizzardUnit.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
